# api-next

./: .deliverit.yaml  .editorconfig  .env  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  cookiecutter-config-file.yml  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup_ci_arangodb.sh
frontend/: .env
schoolsyst-api/: models.py
schoolsyst_api/: auth.py  cors.py  database.py  disallowed_usernames.txt  docs.py  email_confirmed_action.py  env.py  etag.py  events.py  homework.py  main.py  models.py  resource_base.py  settings.py  subjects.py  users.py  utils.py
schoolsyst_api/accounts/: __init__.py  auth.py  email_confirmation.py  models.py  password_reset.py  users.py
schoolsyst_api/global_stats/: models.py  routes.py
schoolsyst_api/grades/: models.py  routes.py
schoolsyst_api/homework/: models.py  routes.py
schoolsyst_api/learn/: __init__.py  models.py
schoolsyst_api/notes/: models.py
schoolsyst_api/personal_archive/: models.py  routes.py
schoolsyst_api/schedule/: __init__.py  models.py  routes.py
schoolsyst_api/settings/: __init__.py  models.py  routes.py
schoolsyst_api/statistics/: models.py  routes.py
schoolsyst_api/subjects/: models.py  routes.py
tests/: __init__.py  test_auth.py  test_subjects.py
tests/e2e/: test_auth.py  test_grades.py  test_homework.py  test_settings.py  test_subjects.py
tests/mocks/: __init__.py
tests/unit/: test_accounts.py  test_accounts_auth.py  test_accounts_email_confirmation.py  test_email_confirmed_action.py  (+4 more)
